2007-06-25  Jose E. Marchesi  <jemarch@gnu.org>

	* src/misc.c (misc_setPageMarker): Correctly adjust the page
	window after PAGE-UP and PAGE-DOWN events. (Patch by Markus
	Steinborn).

	* src/Ghostview.c (GhostviewIsInterpreterRunning): Doesnt report
	the presence of a running gs interpreter if
	`ghostview.disable_start' is true. Patch from Debian.
	(StartInterpreter): Escape beginning minus characters from
	filenames. (Patch by Markus Steinborn).

	* src/Makefile.am (@echo "GV.gsArguments): Add `-dFIXEMEDIA' to
	the `GV.gsArguments' default resource. (Patch by Markus
	Steinborn).

	* src/Ghostview.c (StartInterpreter): Doesnt add the implicit
	"2x2" parameter to ghostscript invocation command line (patch by
	Markus Steinborn).

	* src/info.c (cb_popupInfoPopup): Return when calling gs with the
	`quiet' option (patch by John Bowman).

	* src/main.c (main): Force the `XtSetArg' call to include XtNquiet
	to True (patch by John Bowman).

	* lib/unistd.h (getcwd): New file.

	* lib/unistd_.h (if !): New file.

	* lib/Makefile.am: New file.

	* lib/gettext.h: New file.

	* lib/getopt_int.h: New file.

	* lib/getopt_.h: New file.

	* lib/getopt.c: New file.

	* lib/getopt1.c: New file.

	* lib/dummy.c: New file.

2007-03-31  Peter Breitenlohner <peb@mppmu.mpg.de>

	* src/resource.c (resource_buildDatabase): avoid segfaults when
	  reading ~/.gv as produced by State -> Setup Options -> Save

2007-03-16  Jose E. Marchesi  <jemarch@gnu.org>

	* doc/gv.texi: Fix GVERSION.

2006-07-07  Jose E. Marchesi  <jemarch@gnu.org>

	* src/ps.c: `gettext' function renamed to `ps_gettext' to avoid
	  collision with the `gettext' builtin function.

2006-05-17  Jose E. Marchesi  <jemarch@gnu.org>

	* src/gv_signal.c (signal_setSignalHandlers): Ignore the SIGINT
	signal.

2005-03-31  Jose E. Marchesi  <jemarch@gnu.org>

	* src/Makefile.am ($(srcdir)/gv_intern_res_unix.dat): Remove
	quotes from the gs command lines in order to accomodate to the